{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 17,
  "lineage": "aeea8ecc-1ae2-21ff-f9c2-a75e62fa3daf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prod-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bdce6e156fe42417",
            "arn": "arn:aws:ec2:eu-west-2:637423229805:elastic-ip/eipalloc-0bdce6e156fe42417",
            "domain": "vpc",
            "id": "eipalloc-0bdce6e156fe42417",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-35-177-193-5.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.193.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-nat-eip"
            },
            "tags_all": {
              "Name": "prod-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423229805:internet-gateway/igw-06c0b1c08e6fabc34",
            "id": "igw-06c0b1c08e6fabc34",
            "owner_id": "637423229805",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-08043cdd1b9bf786c"
          },
          "dependencies": [
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prod-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bdce6e156fe42417",
            "association_id": "eipassoc-021b2432d204dd935",
            "connectivity_type": "public",
            "id": "nat-034d7c4af672b2bcf",
            "network_interface_id": "eni-0f26b66b90ca5697c",
            "private_ip": "10.0.1.108",
            "public_ip": "35.177.193.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ca103abe2b6a19a6",
            "tags": {
              "Name": "prod-nat-gateway"
            },
            "tags_all": {
              "Name": "prod-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.prod-nat-eip",
            "aws_internet_gateway.prod-igw",
            "aws_subnet.Prod-pub-sub1",
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-056cb3a22a4de55101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-034d7c4af672b2bcf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056cb3a22a4de5510",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prod-nat-eip",
            "aws_internet_gateway.prod-igw",
            "aws_nat_gateway.prod-nat-gateway",
            "aws_route_table.prod-priv-route-table",
            "aws_subnet.Prod-pub-sub1",
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06c0b1c08e6fabc34",
            "id": "r-rtb-0c79233f3b13a08e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c79233f3b13a08e9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-pub-route-table",
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-priv-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423229805:route-table/rtb-056cb3a22a4de5510",
            "id": "rtb-056cb3a22a4de5510",
            "owner_id": "637423229805",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-priv-route-table"
            },
            "tags_all": {
              "Name": "prod-priv-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08043cdd1b9bf786c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423229805:route-table/rtb-0c79233f3b13a08e9",
            "id": "rtb-0c79233f3b13a08e9",
            "owner_id": "637423229805",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-pub-route-table"
            },
            "tags_all": {
              "Name": "prod-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08043cdd1b9bf786c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b47ec300460de669",
            "route_table_id": "rtb-056cb3a22a4de5510",
            "subnet_id": "subnet-0aa7be8d2bd2b4678"
          },
          "dependencies": [
            "aws_route_table.prod-priv-route-table",
            "aws_subnet.Prod-priv-sub1",
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dad1a9f1de735c9b",
            "route_table_id": "rtb-056cb3a22a4de5510",
            "subnet_id": "subnet-063b8ebc56a0e8ed8"
          },
          "dependencies": [
            "aws_route_table.prod-priv-route-table",
            "aws_subnet.Prod-priv-sub2",
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ae89bc23ed3ac29",
            "route_table_id": "rtb-0c79233f3b13a08e9",
            "subnet_id": "subnet-0ca103abe2b6a19a6"
          },
          "dependencies": [
            "aws_route_table.prod-pub-route-table",
            "aws_subnet.Prod-pub-sub1",
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051bda95933c228eb",
            "route_table_id": "rtb-0c79233f3b13a08e9",
            "subnet_id": "subnet-0ad316414ced9b59a"
          },
          "dependencies": [
            "aws_route_table.prod-pub-route-table",
            "aws_subnet.Prod-pub-sub2",
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prod-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423229805:subnet/subnet-0aa7be8d2bd2b4678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa7be8d2bd2b4678",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423229805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-priv-sub1"
            },
            "tags_all": {
              "Name": "Prod-priv-sub1"
            },
            "vpc_id": "vpc-08043cdd1b9bf786c"
          },
          "dependencies": [
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prod-priv-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423229805:subnet/subnet-063b8ebc56a0e8ed8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063b8ebc56a0e8ed8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423229805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-priv-sub2"
            },
            "tags_all": {
              "Name": "Prod-priv-sub2"
            },
            "vpc_id": "vpc-08043cdd1b9bf786c"
          },
          "dependencies": [
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prod-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423229805:subnet/subnet-0ca103abe2b6a19a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca103abe2b6a19a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423229805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-pub-sub1"
            },
            "tags_all": {
              "Name": "Prod-pub-sub1"
            },
            "vpc_id": "vpc-08043cdd1b9bf786c"
          },
          "dependencies": [
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prod-pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423229805:subnet/subnet-0ad316414ced9b59a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad316414ced9b59a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423229805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-pub-sub2"
            },
            "tags_all": {
              "Name": "Prod-pub-sub2"
            },
            "vpc_id": "vpc-08043cdd1b9bf786c"
          },
          "dependencies": [
            "aws_vpc.tenacity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tenacity_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423229805:vpc/vpc-08043cdd1b9bf786c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1a5d81e339e78e2",
            "default_route_table_id": "rtb-03f20be7a9ca23fe4",
            "default_security_group_id": "sg-08d9df856ff024a4b",
            "dhcp_options_id": "dopt-01faee56f297ab4ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08043cdd1b9bf786c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f20be7a9ca23fe4",
            "owner_id": "637423229805",
            "tags": {
              "Name": "tenacity_vpc"
            },
            "tags_all": {
              "Name": "tenacity_vpc"
            }
          }
        }
      ]
    }
  ]
}